# tree-sitter-markdown

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  .versionrc.js  CHANGELOG.md  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  index.js  package.json
bindings/rust/: build.rs  lib.rs
corpus/: custom.txt  issues.txt  spec.txt
docs/: index.html
docs/assets/tree-sitter-markdown-0.1.0/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.1.1/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.2.0/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.3.0/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.3.1/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.4.0/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.4.1/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.5.0/: tree-sitter-markdown.wasm
docs/assets/tree-sitter-markdown-0.6.0/: tree-sitter-markdown.wasm
gfm-spec/: spec.txt  update.sh
scripts/: generate-playground.js  setup-tree-sitter.sh  update-generated-utils.block-data.json  update-generated-utils.js  update-spec-corpus.js
src/: grammar.json  node-types.json  parser.c  scanner.cc
src/tree_sitter_markdown/: block_context.cc  block_context.h  block_delimiter.cc  block_delimiter.h  block_scan.cc  block_scan.h  inline_context.cc  inline_context.h  inline_delimiter.cc  inline_delimiter.h  inline_scan.cc  lexer.cc  lexer.h  parse_table.cc  parse_table.h  shared_type.cc  shared_type.h  token_type.h  util.cc
(+8 files in other folders)
